part-2/ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise-namespace
  name: exercise-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-container
  template:
    metadata:
      labels:
        app: exercise-container
    spec:
      volumes: # Define volume
        - name: config-volume
          configMap:
            name: exercise-configmap
     #     - name: shared-image
     #       persistentVolumeClaim:
     #         claimName: image-claim
      containers:
        - name: file-serve
          image: ipegii/kube-project-file-serve:0.0.7
   #       volumeMounts: # Mount volume
   #       - name: shared-image
   #         mountPath: /usr/src/app/files
        - name: file-fetch
          image: ipegii/kube-project-file-fetch:0.1.3
