part-2/ping-pong/manifests/service-pong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise-namespace
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: two-container
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
