part-2/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise-namespace
  name: exercise-front-svc
spec:
  type: ClusterIP
  selector:
    app: exercise-container
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
