part-2/ping-pong/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercise-namespace
  name: ingress-wildcard-host
spec:
  rules:
   - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: exercise-back-svc
            port:
              number: 80
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exercise-front-svc
            port:
              number: 80
